various improvements and fixes
- improved renaming branch
- added presenting count of authorized and discovered agents
- improved handling exceptions in watchdog
- fixed presenting shell script on steps tab on run page
- fixed lint issues in ts
